# CVProject

./: .env.prod  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
apps/audit/: admin.py  middleware.py  models.py  tests.py  urls.py  views.py
apps/audit/migrations/: 0001_initial.py
apps/main/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
apps/main/api/: tests.py  urls.py  views.py
apps/main/fixtures/: sample_cvs.json
apps/main/migrations/: 0001_initial.py
nginx/: nginx.conf
project/: celery.py  context_processors.py  settings.py  urls.py  views.py
project/settings/: __init__.py  base.py  development.py  production.py
templates/: base.html
templates/audit/: recent_requests.html
templates/main/: cv_detail.html  cv_list.html  cv_pdf.html  cv_translated.html
templates/settings/: settings.html  settings_block.html  settings_value.html
