[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "rostislav",email = "rostislav444@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "weasyprint (>=64.1,<65.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "drf-writable-nested (>=0.7.2,<0.8.0)",
    "celery (>=5.3.6,<6.0.0)",
    "redis (>=5.0.1,<6.0.0)",
    "watchdog (>=2.2.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
